--- a/app/scss/blocks/detail.scss
+++ b/app/scss/blocks/detail.scss
@@ -21,6 +21,7 @@
 	&__content {
 		flex: 0 1 83.3%;
 		padding: 0px 15px;
+		min-width: 0;
 		display: flex;
 		flex-direction: column;
 	}
@@ -34,7 +35,7 @@
 
 	&__sidebar {
 		flex: 1 1 16.7%;
-		min-width: 235px;
+		min-width: 250px;
 		padding: 0px 15px;
 		display: flex;
 		flex-direction: column;
