--- a/app/scss/components/cart-detail.scss
+++ b/app/scss/components/cart-detail.scss
@@ -2,7 +2,6 @@
 	background: #fff;
 	border-radius: 5px;
 	padding: 30px;
-	height: 738px;
 	// .cart-detail__row
 
 	&__row {
@@ -30,8 +29,9 @@
 		margin: 0px 0px 10px 0px;
 
 		img {
-			width: 570px;
+			width: 100%;
 			height: 570px;
+			object-fit: contain;
 		}
 	}
 
@@ -56,6 +56,7 @@
 			border-radius: 5px;
 			width: 100%;
 			height: 100%;
+			object-fit: contain;
 		}
 	}
 
@@ -218,17 +219,24 @@
 	&__actions {
 		display: flex;
 		align-items: center;
+		margin: 0px 0px 60px 0px;
 	}
 
 	// .cart-detail__actions-quantity
 
 	&__actions-quantity {
+		position: relative;
+		display: flex;
+		align-items: center;
+		color: #888888;
+		font-size: 13px;
+		font-weight: 400;
 	}
 
 	// .cart-detail__actions-btn
 
 	&__actions-btn {
-		padding: 10px 25px;
+		padding: 14px 25px;
 		border-radius: 20px;
 		background-color: #333333;
 		color: #ffffff;
@@ -246,19 +254,34 @@
 	// .cart-detail__actions-shuffle
 
 	&__actions-shuffle {
+		display: flex;
+		align-items: center;
 		color: #888888;
 		font-size: 13px;
 		font-weight: 400;
 		text-transform: uppercase;
+		margin: 0px 30px 0px 0px;
+
+		i {
+			font-size: 20px;
+			margin: 0px 10px 0px 0px;
+		}
 	}
 
 	// .cart-detail__actions-like
 
 	&__actions-like {
+		display: flex;
+		align-items: center;
 		color: #888888;
 		font-size: 13px;
 		font-weight: 400;
 		text-transform: uppercase;
+
+		i {
+			font-size: 20px;
+			margin: 0px 10px 0px 0px;
+		}
 	}
 
 	// .cart-detail__actions-company
@@ -270,16 +293,26 @@
 
 	&__actions-list {
 		display: flex;
+		margin: 0px 19px 0px 0px;
 	}
 
 	// .cart-detail__actions-item
 
 	&__actions-item {
+		font-size: 13px;
+		font-weight: 400;
+		color: #888888;
+		margin: 0px 5px 0px 0px;
 	}
 
 	// .cart-detail__actions-link
 
 	&__actions-link {
+		color: #333333;
+
+		&:hover {
+			color: #e12121;
+		}
 	}
 
 	// .cart-detail__actions-categories
