--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -72,6 +72,7 @@
 @import "components/our-team";
 @import "components/tabs";
 @import "components/cart-detail";
+@import "components/quantity";
 
 /* ==========================================================================
   General Styles
