--- a/app/scss/blocks/all-categories.scss
+++ b/app/scss/blocks/all-categories.scss
@@ -100,6 +100,7 @@
 
 	&__body-title {
 		display: inline-block;
+		text-transform: capitalize;
 		color: #333333;
 		font-size: 20px;
 		font-weight: 600;
